# ShipGuard

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINER_BACKLOG.md  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  shipguard.yml
demo_apps/claims_api/: .env.example  README.md  RELEASE_NOTES.md  docker-compose.yml
demo_apps/claims_api/alembic/versions/: 001_create_claims_table.py  002_add_claim_source.py
demo_apps/claims_api/app/: __init__.py  main.py
demo_apps/claims_api/app/core/: __init__.py  config.py
demo_apps/claims_api/app/db/: __init__.py  models.py
demo_apps/claims_api/app/routes/: __init__.py  claims.py
demo_apps/claims_api/app/services/: __init__.py  claims.py
demo_apps/claims_api/tests/: test_claims_api.py
docs/: github-action-design.md  github-action-usage.md  proof-and-examples.md  pypi-release.md
scripts/: create_demo_repo.py
shipguard/: __main__.py  cli.py  context_builder.py  env_loader.py  git_analyzer.py  github_client.py  llm_client.py  models.py  pr_commenter.py  pr_url_parser.py  project_memory.py  report_generator.py
tests/: test_context_builder.py  test_env_loader.py  test_pr_commenter.py  test_pr_url_parser.py  test_report_generator.py
