[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipguard"
version = "0.1.0"
description = "AI Release Risk Reasoner CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
]

[project.scripts]
shipguard = "shipguard.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["shipguard"]
